engine-net-2/examples/Errors/RuleParametersOutNumberMismatch.grs
new graph "Rules.grg"

exec (n:N)=init ;> (m:M,o:O)=r(n)

quit
